[package]
name = "tide-trace"
version = "0.1.0"
authors = ["Anton Whalley <anton@venshare.com>"]
edition = "2018"
description = "Minimum overhead USDT middleware to dynamically trace tide with BPF or DTrace"
license = "Apache-2.0"
license-file = "LICENSE"
documentation = "https://docs.rs/tide-trace"
homepage = "https://github.com/no9/tide-trace"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tide = "0.11"
async-std = { version = "1.6.0", features = ["unstable"] }
http-types = "2.2.1"
# uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
portpicker = "0.1.0"
surf = { version = "2.0.0-alpha.3", default-features = false, features = ["h1-client"] }
async-std = { version = "1.6.0", features = ["unstable", "attributes"] }